feat: Add reminders feature and notification ingestion service
- Added new route for reminders in app_routes.dart.
- Implemented NotificationIngestService to handle incoming notifications and classify them for reminders.
- Created ReminderService to manage scheduling and displaying reminders using local notifications.
- Introduced ToastService for displaying temporary messages to users.
- Added VectorFace widget for visual feedback based on mood.
- Updated OpenRouterService to classify notifications for reminders.
- Implemented memory update and addition methods in MemoryService.
- Registered new plugins for notification handling and recording capabilities on various platforms.
- Updated pubspec.yaml with new dependencies and configurations for launcher icons.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -120,6 +120,16 @@
 				"$dart-build"
 			],
 			"group": "build"
+		},
+		{
+			"label": "flutter-analyze",
+			"type": "shell",
+			"command": "flutter analyze",
+			"isBackground": false,
+			"problemMatcher": [
+				"$dart-build"
+			],
+			"group": "build"
 		}
 	]
 }
