--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   dio: ^5.9.0
   shared_preferences: ^2.5.3
   intl: ^0.20.2
+  flutter_launcher_icons: ^0.14.4
+  flutter_local_notifications: ^17.2.3
+  notifications: ^3.1.0
+  android_intent_plus: ^6.0.0
+  timezone: ^0.9.4
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +56,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/buddy_logo.jpeg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
