--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   speech_to_text: ^7.3.0
-  flutter_tts: ^4.2.3
+  audioplayers: ^6.0.0
   dio: ^5.9.0
   shared_preferences: ^2.5.3
+  path_provider: ^2.1.4
   intl: ^0.20.2
   flutter_launcher_icons: ^0.14.4
   flutter_local_notifications: ^17.2.3
