--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   speech_to_text: ^7.3.0
-  audioplayers: ^6.0.0
+  audioplayers: ^6.5.1
   dio: ^5.9.0
   shared_preferences: ^2.5.3
-  path_provider: ^2.1.4
+  path_provider: ^2.1.5
   intl: ^0.20.2
   flutter_launcher_icons: ^0.14.4
-  flutter_local_notifications: ^17.2.3
+  flutter_local_notifications: ^19.4.2
   notifications: ^3.1.0
   android_intent_plus: ^6.0.0
-  timezone: ^0.9.4
-  flutter_dotenv: ^5.1.0
+  timezone: ^0.10.1
+  flutter_dotenv: ^6.0.0
+  flutter_timezone: ^5.0.0
   installed_apps: ^1.6.0
 
 dev_dependencies:
@@ -58,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
