--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ OPENROUTER_API_KEY=
 
 # ElevenLabs
 ELEVENLABS_API_KEY=
+
+# Google Custom Search API (for web search functionality)
+# Get your API key from: https://console.cloud.google.com/apis/credentials
+# Create a Custom Search Engine at: https://programmablesearchengine.google.com/
+GOOGLE_SEARCH_API_KEY=
+GOOGLE_SEARCH_ENGINE_ID=
